# Huskybot-with-360-Camera-and-Velodyne-VLP32-C

./: .gitignore  README.md  rename_yolov8_to_yolov12.sh  run_huskybot.sh
install/: local_setup.sh  setup.sh
install/husky_description/share/husky_description/: local_setup.sh  package.sh  package.xml
install/husky_description/share/husky_description/urdf/: decorations.urdf.xacro  empty.urdf  husky.urdf.xacro  pacs.urdf.xacro  wheel.urdf.xacro
install/husky_description/share/husky_description/urdf/accessories/: flir_blackfly_mount.urdf.xacro  hokuyo_ust10.urdf.xacro  sensor_arch.urdf.xacro  sick_lms1xx_mount.urdf.xacro  vlp16_mount.urdf.xacro
install/huskybot_fusion/share/huskybot_fusion/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/huskybot_fusion/share/huskybot_fusion/msg/: Object3D.msg
install/yolov12_msgs/share/yolov12_msgs/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/yolov12_msgs/share/yolov12_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  export_yolov12_msgs__rosidl_generator_cExport-noconfig.cmake  export_yolov12_msgs__rosidl_generator_cppExport.cmake  export_yolov12_msgs__rosidl_generator_pyExport-noconfig.cmake  export_yolov12_msgs__rosidl_generator_pyExport.cmake  export_yolov12_msgs__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_yolov12_msgs__rosidl_typesupport_fastrtps_cppExport.cmake  yolov12_msgsConfig.cmake  yolov12_msgs__rosidl_typesupport_cExport-noconfig.cmake  yolov12_msgs__rosidl_typesupport_cppExport-noconfig.cmake  yolov12_msgs__rosidl_typesupport_introspection_cExport-noconfig.cmake  yolov12_msgs__rosidl_typesupport_introspection_cExport.cmake  yolov12_msgs__rosidl_typesupport_introspection_cppExport-noconfig.cmake  yolov12_msgs__rosidl_typesupport_introspection_cppExport.cmake
install/yolov12_msgs/share/yolov12_msgs/msg/: InferenceResult.idl  Yolov12Inference.idl  Yolov12Inference.msg
log/: latest_build  latest_list
src/gazebo_ros2_control/gazebo_ros2_control/: CMakeLists.txt  gazebo_hardware_plugins.xml
src/gazebo_ros_pkgs/gazebo_plugins/: CMakeLists.txt
src/gazebo_ros_pkgs/gazebo_ros/: CMakeLists.txt
src/husky/husky_description/: CMakeLists.txt
src/husky_custom_description/: CMakeLists.txt
src/husky_custom_description/urdf/: custom_description.urdf.xacro  decorations.urdf.xacro  husky.urdf.xacro  pacs.urdf.xacro
src/huskybot_calibration/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
src/huskybot_calibration/huskybot_calibration/: calibrate_lidar_camera.py  sync_sensor_time.py  utils.py
src/huskybot_calibration/launch/: calibrate_lidar_camera.launch.py  sync_sensor_time.launch.py
src/huskybot_calibration/msg/: SyncedSensorStamp.msg
src/huskybot_calibration/scripts/: record_calib_data.py
src/huskybot_calibration/test/: test_calibration.py  test_copyright.py  test_flake8.py  test_pep257.py  test_sync_sensor_time.py  test_utils.py
src/huskybot_control/: CMakeLists.txt  README.md  package.xml  setup.py
src/huskybot_control/launch/: huskybot_control.launch.py
src/huskybot_control/scripts/: logger.py  robot_control.py  safety_monitor.py
src/huskybot_description/: CMakeLists.txt  README.md  package.xml
src/huskybot_description/calibration/: intrinsic_camera_right.yaml
src/huskybot_description/config/: huskybot_controllers.yaml
src/huskybot_description/launch/: display.launch.py  spawn_huskybot.py  spawn_huskybot_launch.launch.py
src/huskybot_description/meshes/: arducam_imx477.dae  hexagonal-prism.stl
src/huskybot_description/robot/: dummy_yolobot.urdf  husky_with_cameras.xacro  huskybot.urdf.xacro
src/huskybot_description/rviz/: huskybot.rviz
src/huskybot_fusion/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
src/huskybot_fusion/huskybot_fusion/: fusion_node.py  fusion_utils.py
src/huskybot_fusion/launch/: fusion.launch.py
src/huskybot_fusion/test/: test_copyright.py  test_flake8.py  test_pep257.py
src/huskybot_gazebo/: CMakeLists.txt  README.md  package.xml
src/huskybot_gazebo/launch/: huskybot_launch.py  start_world_launch.py
src/huskybot_gazebo/worlds/: yolo_test.world
src/huskybot_mapping/: CMakeLists.txt  README.md
src/huskybot_mapping/config/: velodyne_3d.lua
src/huskybot_mapping/launch/: lio_sam.launch.py  mapping.launch.py
src/huskybot_msgs/: CMakeLists.txt  package.xml
src/huskybot_msgs/msg/: Object3D.msg
src/huskybot_navigation/: CMakeLists.txt  README.md  setup.cfg  setup.py
src/huskybot_recognition/: CMakeLists.txt  README.md  package.xml  setup.py
src/huskybot_recognition/launch/: launch_yolov12.launch.py
src/huskybot_recognition/scripts/: __init__.py  yolov12_detection_logger.py  yolov12_inference_listener.py  yolov12_panorama_inference.py  yolov12_ros2_pt.py  yolov12_ros2_subscriber.py  yolov12_stitcher_node.py
src/yolobot_control/: CMakeLists.txt  README.md  package.xml
src/yolobot_control/scripts/: robot_control.py
src/yolobot_description/: README.md
src/yolobot_description/calibration/: intrinsic_camera_front_left.yaml
src/yolobot_description/launch/: spawn_yolobot_launch.launch.py
src/yolobot_description/meshes/: hexagonal-prism-model_files.zip:Zone.Identifier  hexagonal-prism.step  velodyne_vlp32c.dae
src/yolobot_description/robot/: husky_with_cameras.xacro  yolobot.urdf
src/yolobot_fusion/: README.md  package.xml  setup.cfg  setup.py
src/yolobot_fusion/yolobot_fusion/: fusion_node.py
src/yolobot_gazebo/: README.md
src/yolobot_gazebo/launch/: start_world_launch.py  yolobot_launch.py
src/yolobot_gazebo/worlds/: yolo_test.world
src/yolobot_mapping/: CMakeLists.txt  README.md
src/yolobot_mapping/launch/: mapping.launch.py
src/yolobot_navigation/: README.md  package.xml  setup.cfg  setup.py
src/yolobot_recognition/: CMakeLists.txt  README.md  package.xml
src/yolov12_msgs/: CMakeLists.txt  README.md  package.xml
src/yolov12_msgs/msg/: InferenceResult.msg
src/yolov8_msgs/: CMakeLists.txt  README.md
(+214 files in other folders)
